tests/resources/gatekeeper/lb-constraint.yml
---
# SPDX-license-identifier: Apache-2.0
##############################################################################
# Copyright (c) 2021
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Apache License, Version 2.0
# which accompanies this distribution, and is available at
# http://www.apache.org/licenses/LICENSE-2.0
##############################################################################

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: LoadBalancerConstraint
metadata:
  name: loadbalancerconstraint
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaces:
      - "opa-test"
